--- a/index.html
+++ b/index.html
@@ -1,38 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Travel Agency Page</title>
-    </head>
-    <body>
-      <h1>discover italy</h1>
-      <p>hvhv</p>
-      <h2>Packages</h2>
-        <p>We offer an extensive range of holiday solutions to accommodate the needs of all our clients. From daily excursions in the most beautiful cities, to thorough tours of hidden villages and medieval towns to discover Italy's lesser-known sides.</p>
-        <ul>
-         <li><a href="https://www.freecodecamp.org/learn" target="_blank" >Group Travels</a></li>
-          <li><a href="https://www.freecodecamp.org/learn" target="_blank">Private Tours</a></li>
-        </ul>
-        <h2>Top Itineraries</h2>
-        <figure>
-          <a href="https://www.freecodecamp.org/learn" target="_blank">
-            <img src="https://cdn.freecodecamp.org/curriculum/labs/colosseo.jpg" alt="cow" />
-          </a>
-          <figcaption>rome and center italy</figcaption>
-        </figure>
-        <figure>
-          <a href="https://www.freecodecamp.org/learn" target="_blank">
-            <img src="https://cdn.freecodecamp.org/curriculum/labs/alps.jpg" alt="cat" />
-          </a>
-          <figcaption>nature and national park</figcaption>
-        </figure>
-        <figure>
-          <a href="https://www.freecodecamp.org/learn" target="_blank">
-            <img src="https://cdn.freecodecamp.org/curriculum/labs/sea.jpg" alt="dog" />
-          </a>
-          <figcaption>south italy and island</figcaption>
-        </figure>
-        
 
-    </body>
+<head>
+  <meta charset="utf-8" />
+  <title>Travel Agency Page</title>
+</head>
+<style>
+  .italy {
+    color: #13678A;
+    font-family: cursive;
+    font-style: italic;
+    font-weight: 400;
+    text-align: center;
+    font-size: 50px;
+
+  }
+
+  .body {
+    background-color: #91F2E9;
+    padding: 20px;
+    margin: 4px;
+    border: 4px solid black;
+    border-radius: 3px;
+  }
+
+  .lorem {
+    color: #0d5370;
+    font-family: cursive;
+    font-style: italic;
+    font-weight: 300;
+  }
+
+  .h2 {
+    color: #10526e;
+    width: 2px;
+    font-family: cursive;
+    font-style: italic;
+
+  }
+
+  .tours {
+    color: #124155;
+    font-family: cursive;
+    font-style: italic;
+    font-size: 16px;
+    font-weight: 400;
+
+  }
+
+  .Top {
+    color: #183480;
+    font-family: cursive;
+    font-style: italic;
+
+  }
+
+  img {
+    padding: 0px;
+    margin: 6px;
+    border: 4px solid black;
+    border-radius: 5px;
+    width: 450px;
+
+
+  }
+  figcaption{
+    
+    color: #35534f;
+    font-family: cursive;
+    font-style: italic;
+    font-weight: 400;
+  
+  }
+
+  
+</style>
+
+<body class="body">
+  <h1 class="italy">discover italy</h1>
+  <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore nemo dolorum asperiores est
+    pariatur rerum?</p>
+  <h2 class="h2">Packages</h2>
+  <p class="tours">We offer an extensive range of holiday solutions to accommodate the needs of all our clients. From
+    daily excursions
+    in the most beautiful cities, to thorough tours of hidden villages and medieval towns to discover Italy's
+    lesser-known sides.</p>
+  <ul class="ul">
+    <li><a href="https://www.freecodecamp.org/learn" target="_blank">Group Travels</a></li>
+    <li><a href="https://www.freecodecamp.org/learn" target="_blank">Private Tours</a></li>
+  </ul>
+  <h2 class="Top">Top Itineraries</h2>
+  <figure>
+    <a href="https://www.freecodecamp.org/learn" target="_blank">
+      <img src="https://cdn.freecodecamp.org/curriculum/labs/colosseo.jpg" alt="cow" />
+    </a>
+    <figcaption>rome and center italy</figcaption>
+  </figure>
+  <figure>
+    <a href="https://www.freecodecamp.org/learn" target="_blank">
+      <img src="https://cdn.freecodecamp.org/curriculum/labs/alps.jpg" alt="cat" />
+    </a>
+    <figcaption>nature and national park</figcaption>
+  </figure>
+  <figure>
+    <a href="https://www.freecodecamp.org/learn" target="_blank">
+      <img src="https://cdn.freecodecamp.org/curriculum/labs/sea.jpg" alt="dog" />
+    </a>
+    <figcaption>south italy and island</figcaption>
+  </figure>
+
+
+</body>
+
 </html>
